force-app/main/default/objects/csfb__Conga_Email_Template__c/fields/csfb__HTMLBody__c.field-meta.xml
<CustomField>
    <fullName>csfb__HTMLBody__c</fullName>
    <label>HTML Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>