force-app/main/default/objects/csfb__Conga_Email_Template__c/fields/csfb__Key__c.field-meta.xml
<CustomField>
    <fullName>csfb__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Key</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>