force-app/main/default/objects/csfb__Conga_Email_Template__c/fields/csfb__Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__Name__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>