force-app/main/default/objects/csfb__Conga_Email_Template__c/fields/csfb__Subject__c.field-meta.xml
<CustomField>
    <fullName>csfb__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>