force-app/main/default/objects/csfb__Conga_Email_Template__c/fields/csfb__Template_Group__c.field-meta.xml
<CustomField>
    <fullName>csfb__Template_Group__c</fullName>
    <label>Template Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>