force-app/main/default/objects/csfb__Conga_Email_Template__c/fields/csfb__TextBody__c.field-meta.xml
<CustomField>
    <fullName>csfb__TextBody__c</fullName>
    <label>Text Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>