force-app/main/default/objects/csfb__Conga_Email_Template__c/listViews/csfb__All.listView-meta.xml
<ListView>
    <fullName>csfb__All</fullName>
    <columns>NAME</columns>
    <columns>csfb__Name__c</columns>
    <columns>csfb__Description__c</columns>
    <columns>csfb__Template_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>